|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-05-07 Benedikt Heintel
	- LANGUAGES:
		* Dutch: added missing strings
		* French: added missing strings
		* Romanian: added missing strings

2007-05-04 Benedikt Heintel
	- CONFIGS:
		* fixed #245: ftp alias not working
	- LANGUAGES:
		* Italian: added missing strings
		* Romanian: RC3 compatible
		* Russian: RC3 compatible

2007-05-03 Benedikt Heintel
	- LANGUAGES:
		* Chinese (UTF-8) added missing strings
		* Danish: RC3 compatible
		* Czech: RC3 compatible
		* Japanese: added missing strings
		* Polish: RC3 compatible

2007-05-01 Benedikt Heintel
	- LANGUAGES:
		* Japanese: added missing strings
		* Polish: added missing strings
	- GUI:
		* fixed #237: &nbsp; in Support System
		* fixed #233: no image on error page
		* fixed #231: no image on enable auto responder page

2007-05-01 Malte Geierhos
	- GUI:
		* fixed #236
		* fixed #235

2007-04-30 Benedikt Heintel
	- LANGUAGES:
		* Hungarian: added missing strings
		* Italian: added missing strings
		* Japanese: added missing strings

2007-04-30 Malte Geierhos
	- ENGINE:
		* fixed #223 (/etc/hosts was in wrong format and not ipv6 aware)
	- GUI
		* fixed #234
		* fixed #238
		* fixed #230
		* according to #212 disabled the install function in net2ftp

2007-04-29 Benedikt Heintel
	- ENGINE:
		* fixed #226: wrong link in default alias- and subdomains
	- LANGUAGES:
		* French: added missing strings
		* Finnish: added missing strings
		* German: fixed #229
		* German: added missing strings
		* Hungarian: added missing strings

2007-04-28 Malte Geierhos
	- GUI:
		* fixed #220 (reseller logo file has to few permissions after upload set)