@@ -302,7 +302,7 @@ USER_INITIAL_THEME_COLOR = blue
 
 USER_LAYOUT_ID = 1
 
-ISPCP_LICENSE = ISPCP<sup>&reg;</sup>2.4.8 OMEGA<br />build: 2007-03-19<br />Rhea
+ISPCP_LICENSE = ispCP 1.0rc2 OMEGA<br />build: 2007-04-18<br />Priamos
 
 MINIMAL_FTP_UID = 2000
 
